fixed jumping issue

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,6 +17,12 @@
 }
 .project-row{
     width: 50%;
+    opacity: 0;
+    transition: opacity 1.5s ease-in-out;
+}
+
+.project-row.visible {
+    opacity: 1;
 }
 
 .alt-color{
